# project102

./: Makefile  pyproject.toml
docker_compose/: adminer.yaml  app.yaml  compose.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml  taskiq.yaml  volumes.yaml
src/: .env.template
src/alembic/versions/: 2026_02_10_2317-0a232cd509fd_.py
src/app/: app_lifespan.py  error_handlers.py  prestart.sh  run_main.py
src/app/api/api_v1/: __init__.py  auth.py  user.py
src/app/api/dependencies/: auth.py  user.py
src/app/auth/: helpers.py  utils.py  validation.py
src/app/clients/: s3_client.py
src/app/db/: db_helper.py
src/app/models/: __init__.py  base.py  role.py  user.py
src/app/models/mixins/: __init__.py  email_mixin.py  full_name_mixin.py  hashed_password_mixin.py  phone_number_mixin.py
src/app/repositories/: role.py  user.py
src/app/schemas/: auth.py  token.py  user.py
src/app/schemas/mixins/: __init__.py  email_mixin.py  full_name_mixin.py  int_id_mixin.py  password_mixin.py  phone_number_mixin.py
src/app/services/: auth.py  user.py
src/app/worker/: __init__.py  taskiq_broker.py
src/app/worker/tasks/: __init__.py  delete_unverified_users.py  send_token.py
src/core/: config.py
src/core/enums/: roles.py
src/scripts/: create_first_admin.py
