[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic-settings = ">=2.11.0"
fastapi = { extras = ["standard"], version = ">=0.120.1,<0.121.0" }
uvicorn = ">=0.38.0,<0.39.0"
orjson = ">=3.11.4,<4.0.0"
gunicorn = "^23.0.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.44" }
asyncpg = "^0.30.0"
alembic = "^1.17.1"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
bcrypt = "^4.1.1"
redis = "^7.0.1"
aioboto3 = "^15.5.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.6"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
fakeredis = {extras = ["asyncio"], version = "^2.33.0"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
